# sentinel

./: .env.example  .gitignore  .mcp.json  LICENSE  NUCLEI_INSTALL.md  PHASE5_COMPLETE.md  README.md  docker-compose.juice-shop.yml  pyproject.toml  verify_phase5.py
.claude/: settings.local.json
a_plan/: level-0-index.md  level-1.md  level-10.md  level-11.md  level-12.md  level-13.md  level-14-t3.md  level-15.md  level-16.md  level-17.md  level-18.md  level-19.md  level-2.md  level-20-t4.md  level-21.md  level-22.md  level-23.md  level-24.md  level-25-t5.md  level-26.md  level-27.md  level-28.md  level-29.md  level-3.md  level-30.md  level-31.md  level-4.md  level-5.md  level-6.md  level-7.md  level-8-t2.md  level-9.md
data/: genome.db
docker/: .env.example  Dockerfile.api  Dockerfile.frontend  docker-compose.yml
docker/nginx/: nginx.conf
frontend/: .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
infrastructure/: docker-compose.yml
infrastructure/temporal/: dynamicconfig.yaml
phases_plan/: claude_code_guide.md  docker.md  llm_specs.md  masterplan.md  phase-10.md  phase-11.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
scripts/: install_nmap.ps1  verify_phase1.py  verify_setup.py
sentinel/: pyproject.toml
sentinel/.git.bak/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
sentinel/.git.bak/objects/pack/: pack-394541b594427824d40e6a41dbbbc5cd16cd5a57.idx  pack-394541b594427824d40e6a41dbbbc5cd16cd5a57.pack  pack-394541b594427824d40e6a41dbbbc5cd16cd5a57.rev
sentinel/.git.bak/refs/remotes/origin/: main
sentinel/src/sentinel/: __init__.py
sentinel/src/sentinel/core/: __init__.py  client.py
sentinel/tests/: test_client.py
src/sentinel/: __init__.py  cli.py  config.py  logging_config.py
tests/: test_activities_phase7.py  test_agents.py  test_api.py  test_config.py  test_dns_tool.py  test_event_bus.py  test_genome.py  test_http_recon.py  test_integration.py  test_juice_shop.py  test_nmap_tool.py  test_orchestrator.py  test_pdf.py  test_policy.py  test_schemas.py  test_tools.py  test_tools_unit.py  test_verification.py
tests/agents/: test_exploit_agent.py  test_finding_verifier.py  test_hypothesis_engine.py  test_vuln_agent.py
tests/blue_team/: test_adaptive_waf.py  test_red_blue_loop.py  test_traffic_profiler.py  test_tripwire.py
tests/cicd/: test_diff_analyzer.py  test_selective_scanner.py  test_webhook_handler.py
tests/compliance/: test_framework_maps.py  test_report_generator.py
tests/ctem/: test_differ.py
tests/defense/: test_phase9.py
tests/federated/: test_aggregator.py  test_anonymizer.py  test_confidence.py
tests/formal/: test_hybrid_fuzzer.py  test_property_generator.py  test_z3_verifier.py
(+318 files in other folders)
