[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = "Autonomous AI pentesting platform with real-time red/blue team agents"
authors = ["Iko"]
readme = "README.md"
packages = [{include = "sentinel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.54.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
jinja2 = "^3.1.4"
structlog = "^24.4.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.10.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.8.0"
ruff = "^0.7.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
